# flag-analysis

./: .gitignore  .pdm-python  LICENSE  README.md  pyproject.toml
data/: all_flags.feather  flag_description_tf_idf.feather
flag-analysis/: data_analysis.ipynb  downlad_data.py  flag_images.py  load_data.ipynb  text_mining.ipynb
writeup/: Fun with Flags.tex  HW_references.bib
