[project]
name = "flag-analysis"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jonathan Elsner", email = "jeelsner+gh@outlook.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
