[project]
name = "flag-analysis"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jonathan Elsner", email = "jeelsner+gh@outlook.com"},
]
dependencies = ["beautifulsoup4>=4.13.3", "pandas>=2.2.3", "html5lib>=1.1", "pyarrow>=19.0.1", "matplotlib>=3.10.0", "scikit-learn>=1.6.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
]
